force-app/main/default/objects/User__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <formula>( TODAY()  -  Date_of_Birth__c ) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>