force-app/main/default/objects/User__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Huntsville</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Montgomery</fullName>
            </value>
            <value>
                <fullName>Anchorage</fullName>
            </value>
            <value>
                <fullName>Juneau</fullName>
            </value>
            <value>
                <fullName>Fairbanks</fullName>
            </value>
            <value>
                <fullName>North Pole</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Tucson</fullName>
            </value>
            <value>
                <fullName>Scottsdale</fullName>
            </value>
            <value>
                <fullName>Mesa</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Nashik</fullName>
            </value>
            <value>
                <fullName>Mehrauli</fullName>
            </value>
            <value>
                <fullName>Siri</fullName>
            </value>
            <value>
                <fullName>Tughlakabad</fullName>
            </value>
            <value>
                <fullName>Firozabad</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Tiruchirapalli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>