force-app/main/default/objects/User__c/fields/Confirm_Password__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Password__c</fullName>
    <label>Confirm Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>