force-app/main/default/objects/User__c/validationRules/DateofBirth_Greater_Than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>DateofBirth_Greater_Than_18</fullName>
    <active>true</active>
    <errorConditionFormula>age__c  &lt;= 18</errorConditionFormula>
    <errorMessage>Date Of Birth Must be equal or greater than 18 years</errorMessage>
</ValidationRule>