force-app/main/default/objects/User__c/validationRules/password_is_equal_to_confirm_password.validationRule-meta.xml
<ValidationRule>
    <fullName>password_is_equal_to_confirm_password</fullName>
    <active>true</active>
    <errorConditionFormula>Password__c  &lt;&gt;  Confirm_Password__c</errorConditionFormula>
    <errorMessage>Confirm Password Doesn&apos;t Match To Password</errorMessage>
</ValidationRule>